Clearing margin on h3 + * confined to min-width:$breakpoint-large; Done after consulting with Karl. Seems to prevent excessive space above split second column, but also causes elements to be too close on mobile.

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -155,9 +155,10 @@ $numbered-bullet-margin-right: 1rem;
     &__title {
       margin-top: 0;
       position: relative;
-
-      + * {
-        margin-top: 0;
+      @media only screen and (min-width: $breakpoint-large) {        
+        + * {
+          margin-top: 0;
+        }
       }
     }
 
